#38 Adicionado endpoint para cadastro de usuários
