# api/dto/user_data_dto.py
@@ -1,0 +1,13 @@
+"""
+User Data DTO
+Data for create user
+"""
+
+from dataclasses import dataclass
+
+
+@dataclass
+class UserDataDTO:
+    """User Response structure"""
+    email: str
+    password: str
